--- a/Billed-app-FR-Front/index.html
+++ b/Billed-app-FR-Front/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Icon -->
+    <link rel="icon" type="image/svg" href="src/assets/icon-receipt.svg">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="src/css/login.css">
     <link rel="stylesheet" href="src/css/layout.css">
